minor modifications to home page

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -7,31 +7,36 @@
 	<h1>Brain Tumor Application</h1>
 	<p class="lead">Welcome! Use the links above to navigate.</p>
 
-    @*demo: visual guide through tumor web app*@
-   <iframe  width="854" height="480"  src="https://www.youtube.com/embed/Q6emEMX2NVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    
+</div>
+<div>
+    <h2>Description</h2> @*describes what our webapp will be used for and how to contact us*@
+    <p>
+        We have compiled a database of existing patients and have created a comparison algorithm to analyze patterns between certain variables involved in each patients condition and the effects on the success rate of a variety of treatments. We have also created a user interface that allows users to login or register to gain access to the database showing them the conclusions of our comparison algorithm, as well as allow them to input information regarding a specific patient and receive both a computative analysis of the patients conditions and a recommended course of action calculated using the database.
+    </p>
+    <hr />
+    @*<p>
+        Repo is set to private, users won't be able to view the code unless they log into GitHub
+        Access our code at  <a href="https://github.com/SCCapstone/TumorTaskforce"> https://github.com/SCCapstone/TumorTaskforce </a>
+    </p>*@
 </div>
 
 
 <div class="row">
-	<div class="col-md-4">
-		@*describes what our webapp will be used for and how to contact us*@
-		<h2>Description</h2>
-		<p>
-			We have compiled a database of existing patients and have created a comparison algorithm to analyze patterns between certain variables involved in each patients condition and the effects on the success rate of a variety of treatments. We have also created a user interface that allows users to login or register to gain access to the database showing them the conclusions of our comparison algorithm, as well as allow them to input information regarding a specific patient and receive both a computative analysis of the patients conditions and a recommended course of action calculated using the database.
+    <div class="col-md-6">
+        <h2>Video Tutorial</h2>
+        @*demo: visual guide through tumor web app*@
+        <iframe style="width:90%; height:44%;" src="https://www.youtube.com/embed/Q6emEMX2NVg" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <hr />
+        <h2>Let Us Help You</h2>
+        <p>
+            Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356.
         </p>
-		<h2>Let Us Help You</h2>
-		<p>
-			Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356.
-		</p>
-		<p>
-            @*Repo is set to private, users won't be able to view the code unless they log into GitHub*@
-			@*Access our code at  <a href="https://github.com/SCCapstone/TumorTaskforce"> https://github.com/SCCapstone/TumorTaskforce </a>*@
-		</p>
-	</div>
+    </div>
 
 
 	@*each of our teams picture's and role descriptions*@
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<h2>Get to Know Us</h2>
 		<img src="~/Images/me.JPG" alt="Picture of Laura." style="width:120px;height:160px;" />
 		<p>
@@ -41,14 +46,14 @@
 		<p>
 			Client Representative- Mabel Jaindl
 		</p>
-		<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:130px;height:150px;" />
+		<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:110px;height:150px;" />
 		<p>
 			Researcher- C. Burdell FitzGerald
 		</p>
 	</div>
 
 	@*teams picture's and role descriptions continued*@
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<p>&nbsp;</p>
 		<h2>  </h2>
 		<img src="~/Images/Taylor.JPG" alt="Picture of Taylor." style="width:150px;height:160px;" />
