more test cases

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -32,22 +32,22 @@
                 </div>
                 <div class="form-inline" style="margin:4px 30px 2px 4px;">
                     <p>
-                        Sex: <br />@Html.DropDownList("sex")
+                        Sex: <br />@Html.DropDownList("sex", "Any")
                     </p>
                 </div>
                 <div class="form-inline" style="margin:4px 30px 2px 4px;">
                     <p>
-                        Classification: <br />@Html.DropDownList("clss")
+                        Classification: <br />@Html.DropDownList("clss", "Any")
                     </p>
                 </div>
                 <div class="form-inline" style="margin:4px 30px 2px 4px;">
                     <p>
-                        Location: <br />@Html.DropDownList("tumLoc")
+                        Location: <br />@Html.DropDownList("tumLoc", "Any")
                     </p>
                 </div>
                 <div class="form-inline" style="margin:4px 30px 2px 4px;">
                     <p>
-                        Grade: <br />@Html.DropDownList("grade")
+                        Grade: <br />@Html.DropDownList("grade", "Any")
                     </p>
                 </div>
                 <div class="form-inline">
