changes in testing

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+        <nav class="navbar navbar-expand-sm nav-link bg-faded">
 
             <div class="navbar-header pull-left">
                 <a class="navbar-brand" href="@Url.Action("Index", "Home")">
