--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Content/bootstrap.css
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Content/bootstrap.css
@@ -3846,6 +3846,26 @@ input[type="button"].btn-block {
 .nav-link.disabled {
   color: #6c757d;
 }
+.nav-list {
+    background-color: #CCCCCC;
+    border-top: 0px solid #000000;
+    border-bottom: 0px solid #000000;
+}
+
+.nav-list-item {
+    background-color: #EFEFEF;
+    border-right: 0px solid #000000;
+}
+
+ .nav-list-item a {
+        text-decoration: none;
+        color: #000000;
+        font-family: Arial, sans-serif;
+        font-size: medium;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
+
 
 .nav-tabs {
   border-bottom: 1px solid #dee2e6;
