home page additions for milestone

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -13,6 +13,31 @@
 
 
 <div class="row">
+	@*screenshots of app*@
+	<img src="~/Images/home_page.png" alt="Picture of Home Page." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Home Page
+	</p>
+	<img src="~/Images/comparison.png" alt="Picture of Patients Comparison." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison of Patients
+	</p>
+	<img src="~/Images/directory.png" alt="Picture of Patient Directory." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Patient Directory
+	</p>
+	<img src="~/Images/compare.png" alt="Picture of New Patient Comparison." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison of New Patient
+	</p>
+	<img src="~/Images/results.png" alt="Picture of Patients Comparison Results." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison Results 
+	</p>
+</div>
+
+
+<div class="row">
 	<div class="col-md-4">
 		@*describes what our webapp will be used for and how to contact us*@
 		<h2>Description</h2>
