screenshots of app

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -23,46 +23,70 @@
 
 
 <div class="row">
-    <div class="col-md-6">
-        <h2>Video Tutorial</h2>
-        @*demo: visual guide through tumor web app*@
-        <iframe style="width:90%; height:44%;" src="https://www.youtube.com/embed/Q6emEMX2NVg" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <hr />
-        <h2>Let Us Help You</h2>
-        <p>
-            Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356.
-        </p>
-    </div>
-
-
-	@*each of our teams picture's and role descriptions*@
-	<div class="col-md-3">
-		<h2>Get to Know Us</h2>
-		<img src="~/Images/me.JPG" alt="Picture of Laura." style="width:120px;height:160px;" />
-		<p>
-			Team Leader- Laura Glessner
-		</p>
-		<img src="~/Images/Mabel.JPG" alt="Picture of Mabel." style="width:130px;height:150px;" />
-		<p>
-			Client Representative- Mabel Jaindl
-		</p>
-		<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:110px;height:150px;" />
-		<p>
-			Researcher- C. Burdell FitzGerald
-		</p>
-	</div>
-
-	@*teams picture's and role descriptions continued*@
-	<div class="col-md-3">
-		<p>&nbsp;</p>
-		<h2>  </h2>
-		<img src="~/Images/Taylor.JPG" alt="Picture of Taylor." style="width:150px;height:160px;" />
-		<p>
-			Editor- Taylor Clingenpeel
-		</p>
-		<img src="~/Images/Brian.JPG" alt="Picture of Brian." style="width:140px;height:180px;" />
-		<p>
-			Tester- Brian Sanders
-		</p>
-	</div>
+	@*screenshots of app*@
+	<img src="~/Images/home_page.png" alt="Picture of Home Page." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Home Page
+	</p>
+	<img src="~/Images/comparison.png" alt="Picture of Patients Comparison." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison of Patients
+	</p>
+	<img src="~/Images/directory.png" alt="Picture of Patient Directory." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Patient Directory
+	</p>
+	<img src="~/Images/compare.png" alt="Picture of New Patient Comparison." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison of New Patient
+	</p>
+	<img src="~/Images/results.png" alt="Picture of Patients Comparison Results." style="width:120px;height:160px;" />
+	<p>
+		Screenshot of Webapp's Comparison Results
+	</p>
 </div>
+
+	<div class="row">
+		<div class="col-md-6">
+			<h2>Video Tutorial</h2>
+			@*demo: visual guide through tumor web app*@
+			<iframe style="width:90%; height:44%;" src="https://www.youtube.com/embed/Q6emEMX2NVg" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<hr />
+			<h2>Let Us Help You</h2>
+			<p>
+				Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356.
+			</p>
+		</div>
+
+
+		@*each of our teams picture's and role descriptions*@
+		<div class="col-md-3">
+			<h2>Get to Know Us</h2>
+			<img src="~/Images/me.JPG" alt="Picture of Laura." style="width:120px;height:160px;" />
+			<p>
+				Team Leader- Laura Glessner
+			</p>
+			<img src="~/Images/Mabel.JPG" alt="Picture of Mabel." style="width:130px;height:150px;" />
+			<p>
+				Client Representative- Mabel Jaindl
+			</p>
+			<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:110px;height:150px;" />
+			<p>
+				Researcher- C. Burdell FitzGerald
+			</p>
+		</div>
+
+		@*teams picture's and role descriptions continued*@
+		<div class="col-md-3">
+			<p>&nbsp;</p>
+			<h2>  </h2>
+			<img src="~/Images/Taylor.JPG" alt="Picture of Taylor." style="width:150px;height:160px;" />
+			<p>
+				Editor- Taylor Clingenpeel
+			</p>
+			<img src="~/Images/Brian.JPG" alt="Picture of Brian." style="width:140px;height:180px;" />
+			<p>
+				Tester- Brian Sanders
+			</p>
+		</div>
+	</div>
