--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     </p>*@
 </div>
 
-
+@*
 <div class="row">
 	@*screenshots of app*@
 	<img src="~/Images/home_page.png" alt="Picture of Home Page." style="width:800px;height:1000px;" />
@@ -44,7 +44,7 @@
 	<p>
 		Screenshot of Webapp's Comparison Results
 	</p>
-</div>
+</div> *@
 
 	<div class="row">
 		<div class="col-md-6">
