--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 
 @*
 <div class="row">
-	@*screenshots of app*@
+	screenshots of app
 	<img src="~/Images/home_page.png" alt="Picture of Home Page." style="width:800px;height:1000px;" />
 	<p>
 		Screenshot of Webapp's Home Page
